Change by Harry from Branch 1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="main-container">
-	<div class="description">Welcome to My Application!</div>
+	<div class="description">Welcome to Harry's Application!</div>
         <div class="cloud-image">
             <img src="img/successCloudNew.svg" />
         </div>
